js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-import-call-unknown.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
